@@ -179,8 +179,8 @@ struct  mne     mne[] = {
     {   NULL,   "t1sn",         S_T1SN,         0,      0x0001    },
     {   NULL,   "izsn",         S_IZSN,         0,      0x0012    },
     {   NULL,   "dzsn",         S_DZSN,         0,      0x0013    },
-    {   NULL,   "call",         S_CALL,         0,      0x3800    },
-    {   NULL,   "goto",         S_GOTO,         0,      0x3000    },
+    {   NULL,   "call",         S_CALL,         0,      0x1c00    },
+    {   NULL,   "goto",         S_GOTO,         0,      0x1800    },
     {   NULL,   "pcadd",        S_PCADD,        0,      0x0017    },
     {   NULL,   "engint",       S_ENGINT,       0,      0x0038    },
     {   NULL,   "disgint",      S_DISGINT,      0,      0x0039    },
